--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-less": "^0.1.7",
     "grunt-postcss": "^0.8.0",
+    "grunt-uncss": "^0.6.1",
     "load-grunt-config": "^0.19.2",
     "pug": "^2.0.0-beta5"
   },
